Add User entity and repository with PostgreSQL persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=secure-auth-service
+spring.datasource.url=jdbc:postgresql://localhost:5432/secure_auth_service
+spring.datasource.username=postgres
+spring.datasource.password=Password
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
